objects/OrderADV__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Se crea esta configuración personalizada para la historia PFTA-9421</description>
    <fields>
        <fullName>Linea_Equipo__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Linea Con Equipo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_Estado_ADV__c</fullName>
        <label>Estado ADV</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Solo_Equipo__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Solo Equipo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Solo_Linea__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Solo Linea</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sale_Tipo_de_Documento__c</fullName>
        <label>Tipo de Documento</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sales_Codigo_Operacion__c</fullName>
        <label>Codigo de Operación</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sales_Documentacion_Adjunta__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Tiene Documentación Adjunta</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sales_Tipo_Producto__c</fullName>
        <label>Tipo de Producto</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>TaSalesOperationADV</label>
</CustomObject>